fix scrollbar color in Chrome and possibly others

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,3 +1,7 @@
+:root {
+    color-scheme: dark light;
+}
+
 kbd {
     background-color: #505050;
     padding: 0.2em;
